objects/ProgramLevelBrand__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Program Level Brands</relationshipLabel>
        <relationshipName>Program_Level_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPRM_Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>FieloEE__Badge__c</referenceTo>
        <relationshipLabel>Program Level Brands</relationshipLabel>
        <relationshipName>Program_Level_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Level</label>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Program Level Brands</relationshipLabel>
        <relationshipName>Program_Level_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program Level Brand</label>
    <nameField>
        <label>Program Level Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Level Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>